production-deployment/k8s/networkpolicy-allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-fastapi
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8000
